@@ -15,15 +15,13 @@
  */
 package ch.post.it.evoting.verifier.backend.verifications.tally.consistency;
 
-import static ch.post.it.evoting.cryptoprimitives.collection.ImmutableList.toImmutableList;
-import static ch.post.it.evoting.cryptoprimitives.collection.ImmutableSet.toImmutableSet;
-
 import java.nio.file.Path;
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableList;
-import ch.post.it.evoting.cryptoprimitives.collection.ImmutableSet;
 import ch.post.it.evoting.evotinglibraries.domain.mixnet.ControlComponentShufflePayload;
 import ch.post.it.evoting.evotinglibraries.domain.mixnet.TallyComponentShufflePayload;
 import ch.post.it.evoting.evotinglibraries.domain.tally.ControlComponentBallotBoxPayload;
@@ -87,38 +85,39 @@ public class VerifyBallotBoxIdsConsistency extends AbstractVerification {
 		}
 	}
 
-	private ImmutableList<PayloadsBallotBoxIds> extractBallotBoxIds(final Path inputDirectoryPath) {
+	private List<PayloadsBallotBoxIds> extractBallotBoxIds(final Path inputDirectoryPath) {
 		final PathNode ballotBoxIds = pathService.buildFromRootPath(StructureKey.BALLOT_BOX_ID_DIR, inputDirectoryPath);
 		return ballotBoxIds.getRegexPaths().stream()
 				.parallel()
 				.map(ballotBoxIdPath -> {
 					final String bb = ballotBoxIdPath.getFileName().toString();
-					final ImmutableSet<String> ballotBoxId = ImmutableSet.of(bb);
+					final Set<String> ballotBoxId = Set.of(bb);
 
-					final ImmutableSet<String> controlComponentBallotBoxIds = extractionService.getControlComponentBallotBoxPayloadsOrderedByNodeId(
+					final Set<String> controlComponentBallotBoxIds = extractionService.getControlComponentBallotBoxPayloadsOrderedByNodeId(
 									inputDirectoryPath, bb)
 							.map(ControlComponentBallotBoxPayload::getBallotBoxId)
-							.collect(toImmutableSet());
+							.collect(Collectors.toSet());
 
-					final ImmutableSet<String> controlComponentShuffleIds = extractionService.getControlComponentShufflePayloadsOrderedByNodeId(
+					final Set<String> controlComponentShuffleIds = extractionService.getControlComponentShufflePayloadsOrderedByNodeId(
 									inputDirectoryPath, bb)
+							.parallel()
 							.map(ControlComponentShufflePayload::getBallotBoxId)
-							.collect(toImmutableSet());
+							.collect(Collectors.toSet());
 
 					final TallyComponentShufflePayload tallyComponentShufflePayload = extractionService.getTallyComponentShufflePayload(
 							inputDirectoryPath, bb);
-					final ImmutableSet<String> tallyComponentShufflePayloadId = ImmutableSet.of(tallyComponentShufflePayload.getBallotBoxId());
+					final Set<String> tallyComponentShufflePayloadId = Set.of(tallyComponentShufflePayload.getBallotBoxId());
 
 					final TallyComponentVotesPayload tallyComponentVotesPayload = extractionService.getTallyComponentVotesPayload(ballotBoxIdPath);
-					final ImmutableSet<String> tallyComponentVotesPayloadId = ImmutableSet.of(tallyComponentVotesPayload.getBallotBoxId());
+					final Set<String> tallyComponentVotesPayloadId = Set.of(tallyComponentVotesPayload.getBallotBoxId());
 
 					return new PayloadsBallotBoxIds(ballotBoxId, controlComponentBallotBoxIds, controlComponentShuffleIds,
 							tallyComponentShufflePayloadId, tallyComponentVotesPayloadId);
 				})
-				.collect(toImmutableList());
+				.toList();
 	}
 
-	private record PayloadsBallotBoxIds(ImmutableSet<String> ballotBoxId, ImmutableSet<String> ccBallotBoxIds, ImmutableSet<String> ccShuffleIds,
-										ImmutableSet<String> tcShuffleId, ImmutableSet<String> tcVotesId) {
+	private record PayloadsBallotBoxIds(Set<String> ballotBoxId, Set<String> ccBallotBoxIds, Set<String> ccShuffleIds, Set<String> tcShuffleId,
+										Set<String> tcVotesId) {
 	}
 }
